--- a/TrueSTUDIO/Encoder Configuration/.gitignore
+++ b/TrueSTUDIO/Encoder Configuration/.gitignore
@@ -1,1 +1,56 @@
 /Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
