Fixed LED flash which was pants

--- a/TrueSTUDIO/Encoder Configuration/.gitignore
+++ b/TrueSTUDIO/Encoder Configuration/.gitignore
@@ -59,3 +59,24 @@
 /Debug
 /Debug
 /Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
